# spyber-man

./: README.md
back-end/: .gitignore  README.md  main.ts  nodemon.json  package.json  tsconfig.json
back-end/public/css/: main.css
back-end/public/js/: main.js
back-end/src/compute/: getComputeEnv.ts  models.ts
back-end/src/crawler/: Crawler.ts
back-end/src/crawler/models/: CrawlResult.ts
back-end/src/server/: SpyberMan.ts  database.ts  initServerStack.ts  processEvents.ts  security.ts
back-end/src/server/models/: SpyberManCrawlStatus.ts  crawlRequest.ts
back-end/views/: index.hbs
back-end/views/layouts/: main.hbs
documentation/: README.md  backend-api-reference.md  backend-architecture.md  deployment-and-operations.md  frontend-sample-one.md  repo-overview.md  todos-and-technical-debt.md
front-end-sample-one/: .gitignore  Makefile  README.md  api.py  app.py  models.py  pyproject.toml  requirements.txt  run.sh
