[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyber-crawler-frontend"
version = "0.1.0"
description = "Streamlit frontend for cyber crawler"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "requests>=2.31.0",
]

[tool.uv]
package = false
